Fix plantuml.jar location

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -2550,21 +2550,6 @@ Customize speed-commands :
   (use-package ob-restclient)
   (use-package ob-mermaid)
 
-  (use-package plantuml-mode
-    :init
-      (setq plantuml-default-exec-mode 'jar)
-      (setq plantuml-jar-path "~/opt/plantuml.jar")
-      (setq org-plantuml-jar-path (expand-file-name "~/opt/plantuml.jar"))
-      ;; (setq org-startup-with-inline-images t)
-      ;; (add-to-list 'org-src-lang-modes '("plantuml" . plantuml))
-      ;; (org-babel-do-load-languages 'org-babel-load-languages '((plantuml . t)))
-      :config
-      (setq plantuml-output-type "png")
-      :mode "\\.puml\\'"
-      )
-
-  ;; (setq org-plantuml-jar-path             
-  ;;       (expand-file-name "~/opt/lib/plantuml.jar"))
 
   (org-babel-do-load-languages
    'org-babel-load-languages
@@ -3258,6 +3243,31 @@ Use Pandoc to export to HTML.
 
   (use-package markdown-toc
     :after markdown-mode)
+#+end_src
+** Plant UML
+
+Needs Java and plantuml.jar installed in =~/opt=
+
+#+begin_src shell :tangle no  
+  mkdir -P ~/opt
+  cd ~/opt
+  curl -O -J -L https://github.com/plantuml/plantuml/releases/latest/plantuml.jar
+  chmod 755 plantuml.jar
+#+end_src
+
+#+begin_src emacs-lisp
+  (use-package plantuml-mode
+    :init
+      (setq plantuml-default-exec-mode 'jar)
+      (setq plantuml-jar-path "~/opt/plantuml.jar")
+      (setq org-plantuml-jar-path (expand-file-name "~/opt/plantuml.jar"))
+      ;; (setq org-startup-with-inline-images t)
+      ;; (add-to-list 'org-src-lang-modes '("plantuml" . plantuml))
+      ;; (org-babel-do-load-languages 'org-babel-load-languages '((plantuml . t)))
+      :config
+      (setq plantuml-output-type "png")
+      :mode "\\.puml\\'"
+      )
 #+end_src
 ** Python
 *** python-mode
