Restore some treemacs keybindings

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -1054,6 +1054,8 @@ Cf https://github.com/Alexander-Miller/treemacs#navigation-without-projects-and-
   (use-package treemacs
     :ensure t
     :bind (:map global-map
+                ("M-à" . treemacs-select-window)
+                ("M-0" . treemacs-select-window)
                 ("C-x t t" . treemacs)
                 ("C-x t 1" . treemacs-delete-other-windows))
     :custom
