Update dwim commands

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -3490,6 +3490,7 @@ FIX : Path to plantuml ??
                  (kill-buffer buffer)
                )))))
       )
+     (bind-key "C-c C-! e" #'nc/dwim-shell-command-plantuml-to-png)
      (defun nc/dwim-run-pytest ()
       "Run pytest on marked file"
       (interactive)
@@ -3502,7 +3503,7 @@ FIX : Path to plantuml ??
        :silent-success t
        )
       )
-     (bind-key "C-c C-t f" #'nc/dwim-run-pytest 'python-mode-map)
+     (bind-key "C-c C-! t" #'nc/dwim-run-pytest 'python-mode-map)
      
     )
 #+end_src
