Commment Ruff / Black

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -3182,23 +3182,23 @@ Needs Java and plantuml.jar installed in =~/opt=
 *** Black
 
 #+begin_src emacs-lisp
-  ;; Too many open processes on Windows
-  ;; (use-package blacken
-  ;;   :after python
-  ;;   :hook (python-mode . blacken-mode)
-  ;;   :config (setq blacken-skip-string-normalization t))
+  ;; (use-package reformatter
+  ;;   :hook
+  ;;   (python-mode . black-format-on-save-mode)
+  ;;   :config
+  ;;   (reformatter-define black-format :program "black" :args '("-")))
 #+end_src
 *** Ruff
 
 #+begin_src emacs-lisp
-  (use-package reformatter
-    :hook 
-    (python-mode . ruff-format-on-save-mode)
-    ;; (python-ts-mode . ruff-format-on-save-mode)
-    :config
-    (reformatter-define ruff-format
-      :program "ruff"
-      :args (list "format" "--stdin-filename" (or (buffer-file-name) input-file))))
+  ;; (use-package reformatter
+  ;;   :hook 
+  ;;   (python-mode . ruff-format-on-save-mode)
+  ;;   ;; (python-ts-mode . ruff-format-on-save-mode)
+  ;;   :config
+  ;;   (reformatter-define ruff-format
+  ;;     :program "ruff"
+  ;;     :args (list "format" "--stdin-filename" (or (buffer-file-name) input-file))))
 #+end_src
 
 *** Python pytest
