Add conda activated env in mode line

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -3160,7 +3160,21 @@ Needs Java and plantuml.jar installed in =~/opt=
     :when (executable-find "conda")
     :config
     (conda-env-initialize-interactive-shells)
-    (conda-env-initialize-eshell))
+    (conda-env-initialize-eshell)
+    (add-to-list
+       'global-mode-string
+       '(:eval
+         (list
+          (if conda-env-current-name
+              (propertize (concat "(py: " conda-env-current-name ") ")
+                          'face 'font-lock-builtin-face
+                          'help-echo "Conda environment"
+                          'mouse-face '(:box 1)
+                          'local-map (make-mode-line-mouse-map
+                                      'mouse-1
+                                      (lambda () (interactive)
+                                        (conda-env-activate))))
+            "")))))
 #+end_src
 *** Virtualenvwrapper
 
