--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -3245,14 +3245,16 @@ Automatic formatting with ruff when saving
 
 #+begin_src emacs-lisp
   (use-package apheleia
-
     :config
     (add-to-list 'apheleia-mode-alist '(python-mode . ruff)))
 #+end_src
 *** Python pytest
 
 #+begin_src emacs-lisp
-(use-package python-pytest)
+  (use-package python-pytest
+    :straight '(python-pytest :host github :repo "nchapon/emacs-python-pytest")
+    :config
+    (setq python-pytest-executable "python -m pytest"))
 #+end_src
 
 ** Terraform
