--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -565,7 +565,8 @@ Some Emacs Global Bindings are redefined here.
    ("<f9>" . my/capture-interruption-task)
    ("<f11>" . nc/maximize-or-split-window-vertically)
    ("C-<f11>" . nc/split-window-horizontally)
-   ("<f12>" . org-agenda))
+   ("<f12>" . org-agenda)
+   ("C-<f12>" . org-agenda))
 
   ;; Tools alt-[0-9]
   (bind-keys
@@ -704,6 +705,37 @@ your currently entered incomplete command (a prefix) in a popup.
   :config
   (which-key-mode))
 #+end_src
+** God Mode
+Testing an emacs command mode
+
+#+begin_src emacs-lisp
+
+  (use-package god-mode
+    :bind (("<escape>" . god-mode-all)
+           ("C-x C-1" . delete-other-windows)
+           ("C-x C-2" . split-window-below)
+           ("C-x C-3" . split-window-right)
+           ("C-x C-0" . delete-window))
+
+    :init
+    ;; Disable function translations
+    (setq god-mode-enable-function-key-translation nil)
+    :config
+    ;; Let the exempt default major modes
+    ;;(setq god-exempt-major-modes nil)
+    (setq god-exempt-predicates nil))
+
+  (defun my-update-cursor ()
+    (setq cursor-type (if (or god-local-mode buffer-read-only)
+                            'box
+                          'bar)))
+
+  (add-hook 'god-mode-enabled-hook 'my-update-cursor)
+  (add-hook 'god-mode-disabled-hook 'my-update-cursor)
+
+#+end_src
+
+
 * Windows
 :properties:
 :header-args+: :tangle "./lisp/setup-windows.el"
@@ -1487,7 +1519,7 @@ Completion configuration automatically tangled in =./lisp/setup-completion.el=
                 ("S-TAB"      . corfu-previous)
                 ([backtab]    . corfu-previous)
                 ("<return>" . corfu-insert)
-                ("<escape>"        . corfu-quit))
+                ("C-q"        . corfu-quit))
 
     :init
     (global-corfu-mode)
