Add keybinding for wdired-change-mode

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -854,7 +854,9 @@ Core packages configuration module automatically tangled in =./lisp/setup-core.e
   (use-package dired
     :straight nil
     :bind
-    (("C-x C-j" . dired-jump))
+    (("C-x C-j" . dired-jump)
+     (:map dired-mode-map
+                ("E" . wdired-change-to-wdired-mode)))
     :custom
     ;; Always delete and copy recursively
     (dired-recursive-deletes 'always)
