Trigger tempel completion

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -1573,8 +1573,8 @@ Cf https://github.com/minad/tempel
   ;; Configure Tempel
   (use-package tempel
     ;; Require trigger prefix before template name when completing.
-    ;; :custom
-    ;; (tempel-trigger-prefix "<")
+    :custom
+    (tempel-trigger-prefix "<")
 
     :bind (("M-+" . tempel-complete) ;; Alternative tempel-expand
            ("M-*" . tempel-insert))
