Add compile keybinding

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -552,7 +552,7 @@ Some Emacs Global Bindings are redefined here.
   ;; Move up/down paragraph
   (global-set-key (kbd "M-n") #'forward-paragraph)
   (global-set-key (kbd "M-p") #'backward-paragraph)
-
+  (global-set-key (kbd "C-x c") #'compile)
 
 
   ;; Functions
