--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -516,6 +516,31 @@ Using moe theme dark all the day
   (when has-gui
     (add-hook 'after-init-hook #'nc/setup-font))
 #+end_src
+** Emojify
+
+ℹ️ All-The-Icons and Noto Emoji should be installed
+
+#+begin_src emacs-lisp
+  (setf use-default-font-for-symbols nil)
+  (set-fontset-font t 'unicode "Noto Emoji" nil 'append)
+
+  (use-package emojify
+      :hook (after-init . global-emojify-mode)
+      :config
+
+      (set-fontset-font "fontset-default" 'symbol "Noto Color Emoji" nil 'append)
+      (set-fontset-font "fontset-default" 'symbol "Symbola" nil 'append)
+      (set-fontset-font t 'unicode (font-spec :family "all-the-icons") nil 'append)
+      (set-fontset-font t 'unicode (font-spec :family "file-icons") nil 'append)
+      (set-fontset-font t 'unicode (font-spec :family "Material Icons") nil 'append)
+      (set-fontset-font t 'unicode (font-spec :family "github-octicons") nil 'append)
+      (set-fontset-font t 'unicode (font-spec :family "FontAwesome") nil 'append)
+      (set-fontset-font t 'unicode (font-spec :family "Weather Icons") nil 'append)
+
+      ;; (add-hook 'markdown-mode-hook 'ac-emoji-setup)
+
+      (require 'font-lock))
+#+end_src
 
 * Key Bindings
 :properties:
@@ -1184,12 +1209,6 @@ or no selection is made: nil is returned."
 #+end_src
 
 
-** Emojify
-
-#+begin_src emacs-lisp
-(use-package emojify
-  :hook (after-init . global-emojify-mode))
-#+end_src
 ** wgrep
 
 #+begin_src emacs-lisp
