--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -1710,7 +1710,7 @@ Org mode configuration automatically tangled in =./lisp/setup-org.el=
     ;; New template exapnsion
     (require 'org-tempo)
 
-    (setq org-ellipsis " ↵"
+    (setq org-ellipsis " ⬇"
           org-cycle-separator-lines 0                 ;; Hide empty lines between subtrees
           org-catch-invisible-edits 'show-and-error   ;; Avoid inadvertent text edit in invisible area
           )
