Do not create lock files

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -255,6 +255,8 @@ Small configs for better emacs experience...
         delete-by-moving-to-trash t
         confirm-nonexistent-file-or-buffer nil
         query-replace-highlight t
+        ;; do not create lock files
+        create-lockfiles nil
         ring-bell-function 'ignore
         sentence-end-double-space nil)
  #+end_src
