Remove Casual key

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -549,8 +549,7 @@ Contextual User Interfaces based on Transient (aka magit interface)
 User interface library for Emacs editing commands.
 #+begin_src emacs-lisp
   (use-package casual-editkit
-    :ensure nil
-    :bind (("C-o" . casual-editkit-main-tmenu)))
+    :ensure nil)
 #+end_src
 
 
