--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -549,11 +549,9 @@ Contextual User Interfaces based on Transient (aka magit interface)
 User interface library for Emacs editing commands.
 #+begin_src emacs-lisp
   (use-package casual-editkit
-    :ensure nil)
+    :ensure nil
+    :bind (("<f2>" . casual-editkit-main-tmenu)))
 #+end_src
-
-
-
 
 * Key Bindings
 :properties:
